# ROS-Mani

./: README.md
mobile_pkg/: CMakeLists.txt  package.xml  waypoints.xml
mobile_pkg/launch/: kh4.launch  kh5.launch  kh6.launch
mobile_pkg/src/: cruise_node.cpp  test(复件).cpp  xche.cpp
wpb_mani_simulator/launch/: map_tools1.launch  scene_1_gmapping.launch
wpb_mani_simulator/models/bins/: yellow_bin.model
wpb_mani_simulator/models/boxes/: QD.model  QD1.model  box_blue.model  box_red.model  sz.model  xn.model
wpb_mani_tutorials/nav_lidar/: wpb_local_planner_params.yaml
